<?xml version="1.0"?>
<package format="2">
  <name>little_pig_gazebo</name>
  <version>0.0.0</version>
  <description>The little_pig_gazebo package</description>

  <maintainer email="coach@todo.todo">coach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
